Enabled overflow on mobile (fix #1)

--- a/assets/style.css
+++ b/assets/style.css
@@ -157,6 +157,11 @@ hr {
 }
 
 @media (max-width: 600px) { 
+    
+    html, body {
+        overflow: visible;
+    }
+
     .profile {
         width: 100%;
         height: 100%;
